--- a/index.css
+++ b/index.css
@@ -8,17 +8,35 @@ body {
     align-items: center;
 }
 
-.side-bar {
+.sidebar {
     position: absolute;
     z-index: 2;
 
     min-width: 20vw;
     min-height: 95vh;
+    max-width: 25vw;
+    max-height: 95vh;
     border-radius: 15px;
     overflow: hidden;
     right: 79%;
 
     background-color: #323433;
+}
+
+.sidebar-container {
+    display:flex;
+    flex-direction: column;
+    grid-gap: 25px;
+
+    overflow-y: scroll;
+    height: 100vh;
+}
+
+.bth {
+    min-height: 7.5vh;
+    border-bottom: black solid 1px;
+    text-align: center;
+    padding: 10px;
 }
 
 #map {
